--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,10 @@ dependencies = [
     "jsonlines>=4.0.0",
     "omegaconf>=2.3.0",
     "pybind11[global]>=3.0.1",
+    "regex>=2025.11.3",
     "tensorboard>=2.20.0",
     "tensorstore!=0.1.46,!=0.1.72",
     "torch==2.9.1",
+    "transformer-engine[jax,pytorch]>=2.11.0",
+    "transformers>=4.57.3",
 ]
